--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Add remote 
         env:
           HF: ${{ secrets.HF }}
-        run: git remote add space https://albanisyahril:$HF_TOKEN@huggingface.co/spaces/albanisyahril/demo-trash-classification
+        run: git remote add space https://albanisyahril:$HF@huggingface.co/spaces/albanisyahril/demo-trash-classification
       - name: Push to hub
         env:
           HF: ${{ secrets.HF }}
-        run: git push --force https://albanisyahril:$HF_TOKEN@huggingface.co/spaces/albanisyahril/demo-trash-classification main
+        run: git push --force https://albanisyahril:$HF@huggingface.co/spaces/albanisyahril/demo-trash-classification main
