--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Add remote 
         env:
           HF: ${{ secrets.HF }}
-        run: git remote add space https://$HF@huggingface.co/spaces/albanisyahril/demo-trash-classification
+        run: git remote set-url origin https://$HF@huggingface.co/spaces/albanisyahril/demo-trash-classification
       - name: Push to hub
         env:
           HF: ${{ secrets.HF }}
