--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      
+      - name: Configure Git
+        run: |
+          git config --global user.email "albanisyahril123@gmail.com"
+          git config --global user.name "albanisyahril"
       - name: Add remote 
         env:
           HF: ${{ secrets.HF }}
