--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,7 @@ jobs:
       - name: Add remote 
         env:
           HF: ${{ secrets.HF }}
-        run: |
-          git remote set-url origin https://$HF@huggingface.co/spaces/albanisyahril/demo-trash-classification
-          git pull origin
+        run: git remote set-url origin https://$HF@huggingface.co/spaces/albanisyahril/demo-trash-classification
       - name: Push to hub
         env:
           HF: ${{ secrets.HF }}
