--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Push to hub
         env:
           HF: ${{ secrets.HF }}
-        run: git push --force https://$HF@huggingface.co/spaces/albanisyahril/demo-trash-classification main
+        run: git push --force "https://albanisyahril:${HF_TOKEN}@huggingface.co/spaces/albanisyahril/demo-trash-classification" main
