--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
         run: git remote set-url origin https://$HG@huggingface.co/spaces/albanisyahril/demo-trash-classification
       - name: Push to hub
         env:
-          HF: ${{ secrets.HF }}
+          HG: ${{ secrets.HF }}
         run: git push --force https://$HG@huggingface.co/spaces/albanisyahril/demo-trash-classification main
