--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
       - name: Push to hub
         env:
           HG: ${{ secrets.HG }}
-        run: git push --force https://$HG@huggingface.co/spaces/albanisyahril/demo-trash-classification main
+        run: git push --force https://albanisyahril:${HG}@huggingface.co/spaces/albanisyahril/demo-trash-classification main
